@@ -209,17 +209,18 @@ class App
 		if( !isset($this->implicitUse) )
 			return $plus;
 
+		//problems if implicit is available
 		foreach( $plus as $plusApp )
 		{
 			$found = false;
-			foreach( $this->explicitUse as $explApp )
-			{
-				if( $explApp === $plusApp )
-				{
-					$found = true;
-					break;
-				}
-			}
+            foreach( $this->implicitUse as $implApp )
+            {
+                if( $implApp === $plusApp )
+                {
+                    $found = true;
+                    break;
+                }
+            }
 			if( !$found )
 				$ret[] = $plusApp;
 		}
