@@ -15,6 +15,7 @@ rules-edit: new filter (location is.parent.of [DeviceGroup])
 bugfix:
 - fixed rule 'filter=(rule has.destination.nat)'
 - fix rule-merger - wrong calculation usage for method 5,6,8
+- fix class App - calculateDependencies has missing app-id dependency calculation if explicit and implicit app-id are set
 
 
 1.5.13
